# recipes.vogt4nick.com

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  accepted-words.txt  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-gh-pages.yml  main.yml  maintenance.yml
config/: base.yml
config/at/: mkdocs.yml
config/en/: mkdocs.yml
config/root/: mkdocs.yml
docs/: WRITING-RECIPES.md
overrides/: main.html
overrides/assets/stylesheets/: extra.css
overrides/includes/: temperatures.md
overrides/partials/: content.html
recipes/: about.md  archive.md  desserts.md  food-lab.md  index.md  main-dishes.md  potluck-favorites.md  potlucks.md  retired-recipes.md  sauces-and-sides.md  sides.md
recipes/recipes/: archive.md  beef.md  breads.md  curries.md  desserts.md  entrees.md  food-lab.md  handhelds.md  main-dishes.md  meatless.md  pages.yml  pasta.md  pizzas.md  pork.md  poultry.md  salads.md  sauces-and-sides.md  sauces.md  shareables.md  sides.md  soups.md
recipes/recipes/archive/: aloo-gobi.md  hungarian-goulash.md  pages.yml  tuna-noodle-casserole.md  white-chili.md
recipes/recipes/beef/: pot-roast.md  sauerbraten.md
recipes/recipes/breads/: baguettes.md  focaccia.md  naan.md  pages.yml
recipes/recipes/desserts/: berry-swirl-cheesecake.md  chocolate-chip-cookies.md  pages.yml  (+3 more)
recipes/references/: chefs.md  ingredients.md  styles.md  techniques.md
src/: a-la-carte.md  about.md  index.md  pages.yml
src/at/: index.md  pages.yml  tags.md
src/en/: index.md  menu.md  pages.yml
src/methods/: bean-soup.md  oven-roasted-vegetables.md  pulled-pork.md
src/recipes/: pages.yml
src/references/: chefs.md  ingredients.md  techniques.md
src/root/: index.html
(+1469 files in other folders)
