[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "recipes.vogt4nick.com"
authors = ["Nick Vogt <vogt4nick@gmail.com"]
description = "Nick's Recipes."
readme = "README.md"
repository = "https://github.com/vogt4nick/recipes.vogt4nick.com"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "1.1.2"
mkdocs-awesome-pages-plugin = "2.4.0"
mkdocs-material = "6.1.6"
mkdocs-macros-plugin = "0.5.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pre-commit = "^2.15"
