[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
name = "recipes.vogt4nick.com"
authors = ["Nick Vogt <vogt4nick@gmail.com"]
description = "Nick's Recipes."
readme = "README.md"
repository = "https://github.com/vogt4nick/recipes.vogt4nick.com"
version = "22"

[tool.poetry.dependencies]
python = "~3.8"
mkdocs = "^1.2"
mkdocs-awesome-pages-plugin = "^2.4"
mkdocs-material = "^8.2.9"
mkdocs-minify-plugin = "^0.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15"
