[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
package-mode = false
readme = "README.md"
repository = "https://github.com/vogt4nick/recipes.vogt4nick.com"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2"
mkdocs-awesome-pages-plugin = "^2.4"
mkdocs-material = "^9.0.13"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-minify-plugin = "^0.8.0"
mkdocs-exclude = "^1.0.2"
pymdown-extensions = "^10.0"
mkdocs-pagetree-plugin = "^0.0.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15"
